tests/expected_package_private_phase_field_access.diag.out
<input2>:3:5: error: field 'secret' is private
        pkg_phase_private_field_source::make_draft().secret
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
